<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_places"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/near_by"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/linearLayout_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:theme="@style/PrimaryButton"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_hotels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel"
                android:theme="@style/PrimaryButton"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_hospitals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:theme="@style/PrimaryButton"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_name_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_types">

            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="46dp"
                android:layout_marginStart="46dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/distance"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <include
            android:id="@+id/include8"
            layout="@layout/draws_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_name_distance" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_places"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/name_distance_item" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_hotels"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/name_distance_item" />
        <TextView
            android:id="@+id/no_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_rest"
            android:visibility="gone"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.5"/>

        <TextView
            android:id="@+id/no_hospitals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hosp"
            android:visibility="gone"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.5"/>

        <TextView
            android:id="@+id/no_hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hotels"
            android:visibility="gone"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.5"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_hospitals"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include8"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/name_distance_item" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>